syntax = "proto3";

package google.protobuf;

message BytesValue {
  bytes value = 1;
}
