syntax = "proto3";

package google.protobuf;

message FloatValue {
  float value = 1;
}
