syntax = "proto3";

package google.protobuf;

message Int64Value {
  int64 value = 1;
}
