syntax = "proto3";

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "FooProto";
option java_package = "com.shopify.foo";
option objc_class_prefix = "GTP";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Single-line comment
// Another comment
message Test1 {
  optional int32 a = 1;
}

message TestSigned {
  optional sint32 a = 1;
}

message TestString {
  optional string a = 1;
}

message TestMessage {
  string id = 1;
  uint64 shop_id = 2; // Comment after field
  bool boolean = 3;
}

/*
Multi-line comment
Heyyy
*/
message TestMessage2 {
  string id = 1;
  uint64 shop_id = 2; // Comment after field
  bool boolean = 3;
  repeated uint32 packed_field = 4 [packed = true, deprecated = true];
  uint32 deprecated_field = 5 [deprecated = true];
}

enum VehicleType {
  BIKE = /* C-style comment */ 0;
  SKATEBOARD = 1;
  CAR = 2;
  BIG_AMERICAN_SUV = 3; /* Block comment */
  PICKUP_TRUCK = 4;
}

message TestEmbeddee {
  uint64 value = 1;
}

message TestEmbedder {
  reserved 7;
  uint64 id = 1;
  // Comment between fields
  TestEmbeddee value = 2;
  string message = 3;
}

message TestRepeatedField {
  repeated uint32 e = 1;
}

message TestInt64 {
  int64 int_64 = 1;
}

message TestSint64 {
  sint64 sint_64 = 1;
}
